<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/orange"
    tools:context=".ui.register.FragmentRegister">

    <!-- main Scroll view -->
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <!--  guide line  -->
            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guideline45"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                app:layout_constraintGuide_percent="0.21" />

            <!-- white background -->
            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:background="@drawable/round_background"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintTop_toTopOf="@id/guideline45">

            </androidx.constraintlayout.widget.ConstraintLayout>

            <!-- header image view -->
            <ImageView
                android:id="@+id/imageView"
                android:layout_width="@dimen/_180mdp"
                android:layout_height="@dimen/_180mdp"
                android:layout_marginTop="@dimen/_10mdp"
                android:scaleType="centerCrop"
                android:src="@drawable/man1"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:ignore="ContentDescription" />


            <!--    register text    -->
            <TextView
                android:id="@+id/tvRegister"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/_16mdp"
                android:fontFamily="@font/iran_sans_x_bold"
                android:text="@string/register"
                android:textColor="@color/black"
                android:textSize="18sp"
                app:layout_constraintBottom_toTopOf="@+id/tvUsername"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/imageView" />

            <!--    user name text    -->
            <TextView
                android:id="@+id/tvUsername"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/_16mdp"
                android:layout_marginBottom="@dimen/_16mdp"
                android:fontFamily="@font/iran_sans_x_medium"
                android:text="@string/user_name"
                android:textColor="@color/black"
                android:textSize="16sp"
                app:layout_constraintBottom_toTopOf="@id/etUserName"
                app:layout_constraintRight_toRightOf="parent" />

            <!-- input user name -->
            <EditText
                android:id="@+id/etUserName"
                android:layout_width="match_parent"
                android:layout_height="54dp"
                android:layout_marginHorizontal="@dimen/_16mdp"
                android:layout_marginBottom="@dimen/_32mdp"
                android:background="@drawable/edittext_bg"
                android:drawableEnd="@drawable/user"
                android:drawablePadding="@dimen/_7mdp"
                android:fontFamily="@font/iran_sans_x_regular"
                android:gravity="right|center"
                android:hint="@string/user_name_hint"
                android:importantForAutofill="no"
                android:inputType="text"
                android:paddingHorizontal="@dimen/_15mdp"
                android:textSize="14sp"
                app:layout_constraintBottom_toTopOf="@id/tvPhone"
                tools:ignore="RtlHardcoded" />

            <!--    phone text    -->
            <TextView
                android:id="@+id/tvPhone"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/_16mdp"
                android:layout_marginBottom="@dimen/_16mdp"
                android:fontFamily="@font/iran_sans_x_medium"
                android:text="@string/phone_number"
                android:textColor="@color/black"
                android:textSize="16sp"
                app:layout_constraintBottom_toTopOf="@id/etPhoneNumber"
                app:layout_constraintRight_toRightOf="parent" />

            <!-- input phone -->
            <EditText
                android:id="@+id/etPhoneNumber"
                android:layout_width="match_parent"
                android:layout_height="54dp"
                android:layout_marginHorizontal="@dimen/_16mdp"
                android:layout_marginBottom="@dimen/_40mdp"
                android:background="@drawable/edittext_bg"
                android:drawableEnd="@drawable/phone"
                android:drawablePadding="@dimen/_7mdp"
                android:fontFamily="@font/iran_sans_x_regular"
                android:gravity="right|center"
                android:hint="@string/phone_hint"
                android:importantForAutofill="no"
                android:inputType="number"
                android:maxLength="11"
                android:paddingHorizontal="@dimen/_15mdp"
                android:textSize="14sp"
                app:layout_constraintBottom_toTopOf="@id/btnRegister"
                tools:ignore="RtlHardcoded,TextFields" />

            <!--phone warning message -->
            <TextView
                android:id="@+id/tvWrong_number"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_8mdp"
                android:fontFamily="@font/iran_sans_x_regular"
                android:text="@string/wrong_phone_number"
                android:textColor="@color/red"
                android:textSize="12sp"
                android:visibility="invisible"
                app:layout_constraintRight_toRightOf="@id/etPhoneNumber"
                app:layout_constraintTop_toBottomOf="@id/etPhoneNumber" />

            <!--    submit button        -->
            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btnRegister"
                android:layout_width="match_parent"
                android:layout_height="54dp"
                android:layout_marginHorizontal="@dimen/_16mdp"
                android:layout_marginBottom="@dimen/_30mdp"
                android:background="@drawable/round_orange"
                android:enabled="false"
                android:fontFamily="@font/iran_sans_x_bold"
                android:text="@string/register_in_application"
                android:textColor="@color/white"
                android:textSize="16sp"
                app:layout_constraintBottom_toTopOf="@+id/haveAccount" />

            <!--    go to login fragment text view    -->
            <TextView
                android:id="@+id/haveAccount"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_32mdp"
                android:layout_marginBottom="@dimen/_35mdp"
                android:fontFamily="@font/iran_sans_x_regular"
                android:text="@string/have_account"
                android:textColor="@color/black"
                android:textSize="16sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintRight_toRightOf="@id/btnRegister" />

            <TextView
                android:id="@+id/tvLogin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/iran_sans_x_bold"
                android:text="@string/login"
                android:textColor="@color/blue"
                android:textSize="16sp"
                app:layout_constraintBottom_toBottomOf="@id/haveAccount"
                app:layout_constraintRight_toLeftOf="@id/haveAccount" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>