<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".ui.onBoarding.FragmentOnBording">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@+id/btnLetsGoLayout"
        app:layout_constraintTop_toTopOf="parent">
        <!--  image view header  -->
        <ImageView
            android:id="@+id/ivImage"
            android:layout_width="0dp"
            android:layout_height="287dp"
            android:layout_marginTop="@dimen/_50mdp"
            android:src="@drawable/women_food"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintWidth_percent="0.87" />

        <!--  title   -->

        <TextView
            android:id="@+id/tvTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_marginTop="@dimen/_32mdp"
            android:fontFamily="@font/iran_sans_x_bold"
            android:gravity="center"
            android:text="@string/hi_onBording"
            android:textColor="@color/black"
            android:textSize="18sp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/ivImage" />

        <!--description-->
        <TextView
            android:id="@+id/tvDescription"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_marginTop="@dimen/_24mdp"
            android:fontFamily="@font/iran_sans_x_regular"
            android:gravity="center"
            android:text="@string/onbording_descroption"
            android:textColor="@color/black"
            android:textSize="14sp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvTitle" />
    </androidx.constraintlayout.widget.ConstraintLayout>


    <!--  btn lets Go layout  -->
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/btnLetsGoLayout"
        android:layout_width="match_parent"
        android:layout_height="54dp"
        android:layout_marginHorizontal="@dimen/_90mdp"
        android:layout_marginBottom="@dimen/_40mdp"
        android:background="@drawable/round_orange"
        app:layout_constraintBottom_toBottomOf="parent">
        <!--  icon  -->
        <ImageView
            android:id="@+id/btnLogo"
            android:layout_width="38dp"
            android:layout_height="38dp"
            android:layout_marginStart="@dimen/_5mdp"
            android:src="@drawable/ic_arrow_start"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="ContentDescription" />
        <!--  text  -->
        <TextView
            android:id="@+id/btnText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="8"
            android:fontFamily="@font/iran_sans_x_bold"
            android:gravity="center"
            android:text="@string/lets_start"
            android:textColor="@color/white"
            android:textSize="16sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toRightOf="@id/btnLogo"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>


</androidx.constraintlayout.widget.ConstraintLayout>